showError modal screen covering fixed

--- a/src/index.css
+++ b/src/index.css
@@ -159,8 +159,8 @@ body {
   .error-message {
     /* background: rgba(255, 255, 255, 0.7); */
     position: fixed;
-    height: 100%;
-    width: 100%;
+    /* height: 100%; */
+    width: 90%;
     top: 0;
     left: 0;
   }
